Fix absolute value warning in LocalizedStringsGtk.cpp https://bugs.webkit.org/show_bug.cgi?id=145919

Reviewed by Martin Robinson.

Use abs(static_cast<int>(time)) rather than static_cast<int>(abs(time)) to avoid clang's
warnings about passing a float to abs() instead of std::abs(). Also, because casting an int
to an int is silly.

* platform/gtk/LocalizedStringsGtk.cpp:
(WebCore::localizedMediaTimeDescription):


Canonical link: https://commits.webkit.org/164229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185786 268f45cc-cd09-0410-ab3c-d52691b4dbfc